--- a/options/options.html
+++ b/options/options.html
@@ -5,7 +5,7 @@
     <title>Token Provider Options</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
     <link rel="stylesheet" href="options.css">
-    <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/jquery-3.2.1.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
