added export to json

--- a/options/options.html
+++ b/options/options.html
@@ -22,6 +22,14 @@
         <tfoot>
             <tr>
                 <td id="controls" colspan="10">
+                    <button id="import" type="button" class="pure-button">
+                        <img src="/assets/import.svg">
+                    </button>
+                    &nbsp;
+                    <button id="export" type="button" class="pure-button">
+                        <img src="/assets/export.svg">
+                    </button>
+                    &nbsp;
                     <button id="new" type="button" class="pure-button">
                         <img src="/assets/add.svg">
                     </button>
