--- a/options/options.html
+++ b/options/options.html
@@ -22,19 +22,23 @@
         <tfoot>
             <tr>
                 <td id="controls" colspan="10">
-                    <button id="import" type="button" class="pure-button">
+                    <button id="import" type="button" class="pure-button tooltip">
+                        <span class="tooltiptext">Import settings</span>
                         <img src="/assets/import.svg">
                     </button>
                     &nbsp;
-                    <button id="export" type="button" class="pure-button">
+                    <button id="export" type="button" class="pure-button tooltip">
+                        <span class="tooltiptext">Export settings</span>
                         <img src="/assets/export.svg">
                     </button>
                     &nbsp;
-                    <button id="new" type="button" class="pure-button">
+                    <button id="new" type="button" class="pure-button tooltip">
+                        <span class="tooltiptext">Create new user</span>
                         <img src="/assets/add.svg">
                     </button>
                     &nbsp;
-                    <button id="save" type="button" class="pure-button">
+                    <button id="save" type="button" class="pure-button tooltip">
+                        <span class="tooltiptext">Accept changes</span>
                         <img src="/assets/save.svg">
                     </button>
                 </td>
