fixed bug with wrong environments when default user selected on popup

--- a/options/options.html
+++ b/options/options.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Token Provider Options</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
+    <link rel="stylesheet" href="/pure-min.css">
     <link rel="stylesheet" href="options.css">
     <script type="text/javascript" src="/jquery-3.2.1.min.js"></script>
 </head>
